restのportに関するクラスを追加&テスト